fix(theme): fix sidenav collapsed transition

--- a/src/app/theme/admin-layout/admin-layout.component.scss
+++ b/src/app/theme/admin-layout/admin-layout.component.scss
@@ -16,7 +16,7 @@
 .matero-sidenav {
   position: absolute;
   overflow-x: hidden;
-  transition: swift-ease-out(width); // Only set width property
+  transition: transitions.swift-ease-out(width); // Only set width property
 
   @include mat.elevation(2);
 
